--- a/src/App.css
+++ b/src/App.css
@@ -219,6 +219,120 @@ input,
   transition: 0.5s;
 }
 
+.rando-button {
+  color: #f29102;
+  background: #323232;
+  border: none;
+  text-shadow: 0.1rem 0.1rem #995c00;
+  box-shadow: 0.1rem 0.1rem rgb(40, 40, 40);
+  animation: rando-return 0.5s forwards;
+}
+
+@keyframes rando-return {
+  0% {
+    color: #d3d3d3;
+    background: #323232;
+    border: none;
+    text-shadow: 0.1rem 0.1rem #995c00;
+    box-shadow: 0.1rem 0.1rem rgb(40, 40, 40);
+    clip-path: polygon(
+      27.5% 47.8%,
+      0 0,
+      0 100%,
+      27.5% 53%,
+      0% 100%,
+      100% 100%,
+      29.5% 53%,
+      100% 100%,
+      100% 0%,
+      29.5% 47.8%,
+      100% 0,
+      0 0
+    );
+  }
+  100% {
+    clip-path: polygon(
+      27.5% 20%,
+      20% 10%,
+      20% 90%,
+      27.5% 80%,
+      10% 100%,
+      90% 100%,
+      72.5% 80%,
+      80% 90%,
+      80% 10%,
+      72.5% 20%,
+      90% 0,
+      10% 0
+    );
+  }
+}
+
+.rando-button:hover {
+  animation: rando 2s forwards;
+}
+
+@keyframes rando {
+  0% {
+    clip-path: polygon(
+      77.5% 20%,
+      20% 10%,
+      20% 90%,
+      77.5% 80%,
+      10% 100%,
+      90% 100%,
+      72.5% 80%,
+      80% 90%,
+      80% 10%,
+      72.5% 20%,
+      90% 0,
+      10% 0
+    );
+  }
+  30% {
+    color: #f29102;
+    background: #323232;
+    border: none;
+    text-shadow: 0.1rem 0.1rem #995c00;
+    box-shadow: 0.1rem 0.1rem rgb(40, 40, 40);
+    clip-path: polygon(
+      27.5% 47.8%,
+      0 5%,
+      0 95%,
+      27.5% 53%,
+      5% 100%,
+      95% 100%,
+      29.5% 53%,
+      100% 95%,
+      100% 5%,
+      29.5% 47.8%,
+      95% 0,
+      5% 0
+    );
+  }
+  100% {
+    color: #d3d3d3;
+    background: #323232;
+    border: none;
+    text-shadow: 0.1rem 0.1rem #995c00;
+    box-shadow: 0.1rem 0.1rem rgb(40, 40, 40);
+    clip-path: polygon(
+      27.5% 47.8%,
+      0 0,
+      0 100%,
+      27.5% 53%,
+      0% 100%,
+      100% 100%,
+      29.5% 53%,
+      100% 100%,
+      100% 0%,
+      29.5% 47.8%,
+      100% 0,
+      0 0
+    );
+  }
+}
+
 .delete-button {
   height: 1.6rem;
   transition: 0.2s;
